--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>代表作：START-323 今、の地元愛溢れる次世代スター！ 天神羽衣 AV DEBUT</p>
     </div>
     <a class="search-btn"
-       href="https://www.google.com/search?q=天神羽衣+AV"
+       href="https://www.google.com/search?q=START-323+missAV.ai+"
        target="_blank" rel="noopener">Google検索</a>
   </div>
 
