--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>代表作：START-323 今、の地元愛溢れる次世代スター！ 天神羽衣 AV DEBUT</p>
     </div>
     <a class="search-btn"
-       href="https://www.google.com/search?q=START-323+missAV.ai+"
+       href="https://www.google.com/search?q=START-323+missAV.ai"
        target="_blank" rel="noopener">Google検索</a>
   </div>
 
@@ -24,7 +24,7 @@
       <p>代表作：START294 ！華奢な体 一宮るい</p>
     </div>
     <a class="search-btn"
-       href="https://www.google.com/search?q=一宮るい+AV"
+       href="https://www.google.com/search?q=START294+missAV.ai"
        target="_blank" rel="noopener">Google検索</a>
   </div>
 
@@ -34,7 +34,7 @@
       <p>代表作：GNI-004 新人 瀬緒凛 2,710 9</p>
     </div>
     <a class="search-btn"
-       href="https://www.google.com/search?q=瀬緒凛+AV"
+       href="https://www.google.com/search?q=GNI-004+missAV.ai"
        target="_blank" rel="noopener">Google検索</a>
   </div>
 
@@ -44,7 +44,7 @@
       <p>代表作：FSDSS-888 スペシャル 降矢あすか</p>
     </div>
     <a class="search-btn"
-       href="https://www.google.com/search?q=降矢あすか+AV"
+       href="https://www.google.com/search?q=FSDSS-888+missAV.ai"
        target="_blank" rel="noopener">Google検索</a>
   </div>
 
