--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>本当は教えたくない！おすすめAV女優4選</title>
+  <title>本当は教えたくない！おすすめパイ○ンAV女優4選</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>本当は教えたくない！おすすめAV女優4選</h1>
+  <h1>本当は教えたくない！おすすめパイ○ンAV女優4選</h1>
 
   <div class="card">
     <div class="card-content">
